사람과 동물의 위치를 실시간으로 받아와서 거리 값 비교하는 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
 
         <service
-            android:name=".LocationComparisonService"
+            android:name=".LocationCompareService"
             android:exported="false"></service>
     </application>
 
